# gmewebapi

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/gmewebapi/: __init__.py
